<resources>
    <string name="app_name">My Word Banks</string>
    <string name="new_word">New Word</string>
    <string name="saved_word">My Collections</string>
    <string name="todo">TODO</string>
    <string name="Enter_word">Enter word here</string>
    <string name="Update">Update This Word</string>
    <string name="Bangla">Meaning of Bangla</string>
    <string name="English">Meaning of English</string>
    <string name="Synonyme">Synonyme of this word</string>
    <string name="InsertWord">Inserted Word</string>
    <string name="Word">Tergated Word</string>

</resources>

