<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WordDetail">

    <TextView
        android:id="@+id/view_word"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/Word"
        android:textAlignment="center"
        android:textSize="30sp"
        android:background="@color/liteSilver"
        />

    <TextView
        android:id="@+id/view_bangla_meaning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_word"
        android:layout_marginTop="15dp"
        android:background="@color/liteSilver"
        android:hint="@string/Bangla"
        android:textSize="40sp"
        />

    <TextView
        android:id="@+id/view_english_meaning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_bangla_meaning"
        android:layout_marginTop="15dp"
        android:background="@color/liteSilver"
        android:hint="@string/English"
        android:textSize="40sp"
        />

    <TextView
        android:id="@+id/Synonyms"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/view_english_meaning"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:layout_marginTop="15dp"
        android:background="@color/liteSilver"
        android:hint="@string/Synonyme"
        android:textSize="30sp"
        />



</RelativeLayout>